# opencv_labs_2sem

./: .gitignore  CMakeLists.txt  README.md
lab3/src/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab5/: calibration.xml  detector_params.yml
lab5/src/: main.cpp
lab6/: main.cpp
